- Add "Create new folder"